objects/Contract.object
<CustomObject>
    <fields>
        <fullName>DB_Days__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;),EndDate &gt; TODAY()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether contact roles from the original opportunity should carry over to renewal opportunity.</description>
        <inlineHelpText>Check to carry over contact roles from original to renewal p.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether partners from the original opportunity should carry over to renewal opportunity.</description>
        <inlineHelpText>Check to carry over partners from original to renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates this contract as the master contract for this account. Upon renewal all contracts will be rolled into this contract.</description>
        <inlineHelpText>Designates this contract as the master contract for this account. Upon renewal all contracts will be rolled into this contract.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>ID of price book used from the original opportunity.</description>
        <formula>SBQQ__Opportunity__r.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of price book used from the original opportunity.</inlineHelpText>
        <label>Opportunity Pricebook Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes</description>
        <inlineHelpText>Select to maintain bundle hierarchy on renewal quotes</inlineHelpText>
        <label>Preserve Bundle Structure Upon Renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote that generated this contract.</description>
        <inlineHelpText>Quote that generated this contract.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers generation of renewal opportunity (no quote) for forecasting purposes.</description>
        <inlineHelpText>Triggers generation of renewal opportunity (no quote) for forecasting purposes.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity generated from this contract. Null value won&apos;t attempt to set record type.</description>
        <inlineHelpText>Record type of renewal opportunity if different than the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Stage of auto generated renewal opportunities.</description>
        <inlineHelpText>Default stage of renewal opportunity generated from this contract.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who should own the renewal opportunity.</description>
        <inlineHelpText>User who should own the renewal opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>ID of price book to use when renewing this contract.</description>
        <inlineHelpText>ID of price book to use when renewing this contract.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Term of the renewal, which defaults to the original contract term.</description>
        <inlineHelpText>Term of the renewal, which defaults to the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>